--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,7 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+//@import '~bootstrap/scss/bootstrap';
 
 
 @import "~tailwindcss/base";
@@ -13,3 +13,8 @@
 @import "~tailwindcss/components";
 
 @import "~tailwindcss/utilities";
+
+.button {
+  @apply .bg-blue .text-white .no-underline .py-2 .px-5 .text-sm .rounded-lg;
+  box-shadow: 0 2px 7px 0 #b0eaff;
+}
