--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,3 +18,7 @@
   @apply .bg-blue .text-white .no-underline .py-2 .px-5 .text-sm .rounded-lg;
   box-shadow: 0 2px 7px 0 #b0eaff;
 }
+
+.card {
+  @apply .bg-white .p-5 .rounded-lg .shadow;
+}
